--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,8 @@
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.2/plyr.css" integrity="sha512-jrLDXl9jUPe5DT19ukacvpX39XiErIBZxiaVMDFRe+OAKoBVYO126Dt7cvhMJ3Fja963lboD9DH+ev/2vbEnMw==" crossorigin="anonymous" />
 
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.4.6/plyr.css">
+
     <title>React App</title>
   </head>
   <body>
@@ -49,5 +51,9 @@
 
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v8.0&appId=763684077493968&autoLogAppEvents=1" nonce="PjPQS4RU"></script>
+    <script src="https://cdn.plyr.io/3.4.6/plyr.js"></script>
+    <script>
+      const player = new Plyr('#player');
+    </script>
   </body>
 </html>
