--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
     <link rel="stylesheet" href="https://cdn.plyr.io/3.4.6/plyr.css">
 
-    <title>React App</title>
+    <title>Let's Flix</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
