--- a/public/index.html
+++ b/public/index.html
@@ -24,14 +24,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <script src="https://kit.fontawesome.com/c32adfdcda.js" crossorigin="anonymous"></script>
+    <script async defer src="https://kit.fontawesome.com/c32adfdcda.js" crossorigin="anonymous"></script>
     <!-- Font -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" rel="stylesheet">
+    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" as="style" onload="this.onload=null;this.rel='stylesheet'">
     
     <title>Let's Flix</title>
   </head>
   <body oncontextmenu="return false;">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>
+      You need to enable JavaScript to run this app.
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700">
+    </noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
