--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,14 @@
     -->
     <script async defer src="https://kit.fontawesome.com/c32adfdcda.js" crossorigin="anonymous"></script>
     <!-- Font -->
-    <link rel="preload" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700&display=swap">
     
     <title>Let's Flix</title>
   </head>
   <body oncontextmenu="return false;">
     <noscript>
       You need to enable JavaScript to run this app.
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600%7CUbuntu:300,400,500,700">
+      
     </noscript>
     <div id="root"></div>
     <!--
